# Phishingdetector

./: .replit  .replit.workflow  Dockerfile  Dockerfile.updated  PORT_5001_SOLUTION.md  README.md  TODO.md  api_routes.py  cookies.txt  create_port5001_workflow.py  create_shell_script.py  create_solution_guide.py  create_speedefender_workflow.py  docker-compose.yml  main.py  phishing_detector.py  pyproject.toml  replit.nix  requirements.txt  run_speedefender_5001.py  standalone_server.py  start_app.sh  start_app_5001.sh  start_speedefender_5001.sh  temp_edit.sh  test_sendgrid.py  test_ssl_validation.py  update_readme.py  workflow_port5001.py
analysis_history/: 20250326_122500_https_speehive_com.json  20250326_122529_https_google_com.json  20250326_122820_https_google_com.json  20250327_070955_https_google_com.json  20250327_071053_https_flipkart_com.json  20250327_071110_https_flipkart_com.json  20250327_072012_https_speehive_com.json  20250327_072134_https_xvidoes_com.json  20250327_072203_https_speehive_com.json  20250327_082542_https_google_com.json  20250327_082614_https_speehive_com.json  20250327_085724_https_google_com.json  20250327_085741_https_google_com.json  20250327_085809_https_speehive_com.json  20250327_105659_https_google_com.json  20250327_105715_https_speehive_com.json  20250327_105810_https_speehive_com.json  20250327_105811_https_amazon_com.json  20250327_105820_https_speehive_com.json  20250327_105822_https_amazon_com.json  20250327_105825_https_flipkart_com.json  20250327_105836_https_flipkart_com.json  20250401_120000_https___google_com.json  (+172 more)
(+75 files in other folders)
