[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-whois>=0.9.5",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "tldextract>=5.1.3",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "xhtml2pdf>=0.2.17",
]
